--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -4,27 +4,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2.4rem;
-  gap: 0.938rem;
+  margin-top: 2.4em;
+  gap: 0.938em;
 }
 
 .bookList {
-  width: 75rem;
-  height: 10.625rem;
-  margin: 0 0.063rem 0.938rem 0;
-  padding: 2rem 7.438rem 1.625rem 1.688rem;
+  width: 75em;
+  height: 10.625em;
+  margin: 0 0.063em 0.938em 0;
+  padding: 2em 7.438em 1.625em 1.688em;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
 }
 
 .gen {
-  width: 7rem;
-  height: 1.125rem;
-  margin: 0 4rem 0 0;
+  width: 7em;
+  height: 1.125em;
+  margin: 0 4em 0 0;
   opacity: 0.5;
   font-family: 'Poppins', sans-serif;
-  font-size: 0.875rem;
+  font-size: 0.875em;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
@@ -34,25 +34,24 @@
 }
 
 .Title {
-  width: 22.813rem;
-  height: 1.813rem;
-  margin: 0.188rem 9.688rem 0 0;
+  width: 22.813em;
+  height: 1.813em;
+  margin: 0.188em 9.688em 0 0;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.375rem;
+  font-size: 1.375em;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: -0.2px;
-  color: var(--black-two);
 }
 
 .auth {
-  width: 6.688rem;
-  height: 1.188rem;
-  margin: 0.25rem 0 0;
+  width: 6.688em;
+  height: 1.188em;
+  margin: 0.25em 0 0;
   font-family: 'Poppins', sans-serif;
-  font-size: 0.875rem;
+  font-size: 0.875em;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
@@ -64,10 +63,10 @@
 .Comments {
   display: flex;
   align-items: center;
-  height: 1.188rem;
-  margin: 0.188rem 0.938rem 0.125rem 0;
+  height: 1.188em;
+  margin: 0.188em 0.938em 0.125em 0;
   font-family: 'Poppins', sans-serif;
-  font-size: 0.875rem;
+  font-size: 0.875em;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
